# min-dat--a-priori

./: DataAssociation.cabal  LICENSE  README.md  todo.md
core/: DataAssociation.cabal  todo.md
core/src/: AprioriCacheToFile.hs  DataAssociation.hs  Main.hs
core/src/DataAssociation/: APriori.hs  Abstract.hs  Definitions.hs  PostProcess.hs  Utils.hs
core/src/DataAssociation/APriori/: Public.hs
core/src/DataAssociation/Itemset/: SetImpl.hs
core/src/DataAssociation/PostProcess/: Descriptor.hs
core/src/DataAssociation/SimpleRulesGenerator/: Debug.hs
core/test/: AprioriSpec.hs  SimpleRulesGeneratorSpec.hs  TestData.hs
data/: course-selection-itesm-ITC.arff  demo-data-sparse.arff
data/scripts/: schedule2weka.scala
explore/: DataAssociation-Explore.cabal
explore-web-backend/: DataAssociation-Explore-Web.cabal  todo.md
explore-web-backend/exec-src/: AprioriExploreServer.hs
explore-web-backend/src/DataAssociation/Explore/UI/Web/: Application.hs  Render.hs  RulesTransfer.hs  Server.hs  WebsocketServer.hs
explore-web-backend/src/DataAssociation/Explore/UI/Web/Application/: DefaultImpl.hs  Message.hs
explore-web-backend/static/: apriori.css  apriori.js
explore/src/DataAssociation/Explore/: Program.hs  State.hs
explore/src/DataAssociation/Explore/GUI/: MainFrame.hs
explore/src/DataAssociation/Explore/UI/: Application.hs  State.hs
src/: DataAssociation.hs  DataAssociationTest.hs  Main.hs  RunDataAssocWekaApriorySimple.hs  WekaData.hs
src/DataAssociation/: APriori.hs  Abstract.hs  Definitions.hs  PostProcess.hs  SimpleRulesGenerator.hs  Utils.hs
src/DataAssociation/APriori/: Debug.hs
src/DataAssociation/Itemset/: SetImpl.hs
test/: AprioriSpec.hs  Main.hs  SimpleRulesGeneratorSpec.hs  SimpleRulesGeneratorTest.hs  TestData.hs  tests.hs
test/AprioriSpec/: Data.hs
test/AprioriSpec/Data/: TiloBalkeExample.hs
test/TestData/: TiloBalkeExample.hs
