name: DataAssociation
version: 0.1.0
cabal-version: 1.12
build-type: Simple
license: MIT
license-file: ""
data-dir: ""

library
    build-depends:   base -any
                   , containers -any
                   , split -any
    default-language: Haskell2010
    hs-source-dirs: src
    default-extensions: MultiParamTypeClasses
                        FlexibleInstances
                        UndecidableInstances
    exposed-modules: DataAssociation
                     DataAssociation.Definitions
                     DataAssociation.Abstract
                     DataAssociation.APriori
                     DataAssociation.APriori.Debug
                     DataAssociation.SimpleRulesGenerator
                     DataAssociation.SimpleRulesGenerator.Debug
                     DataAssociation.Utils
                     DataAssociation.Itemset.SetImpl
                     WekaData
                     DataAssociationTest
--    other-modules:

executable mine-rules
    build-depends: base -any
                 , containers -any
                 , split -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules:
    default-extensions: MultiParamTypeClasses
                        FlexibleInstances
                        UndecidableInstances

test-suite tests
    build-depends: DataAssociation
                 , hspec -any
                 , base -any
                 , containers -any
--                 , QuickCheck -any
    type: exitcode-stdio-1.0
    main-is: tests.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules: AprioriSpec
                   TestData
                   TestData.TiloBalkeExample
                   SimpleRulesGeneratorSpec
