name: DataAssociation
version: 0.2.0.2
cabal-version: 1.12
build-type: Simple
license: MIT
license-file: "../LICENSE"
data-dir: ""

library
    build-depends:   base >= 4.6
                   , containers > 0.5
    default-language: Haskell2010
    hs-source-dirs: src
    default-extensions: MultiParamTypeClasses
                        FlexibleInstances
                        UndecidableInstances
    exposed-modules: DataAssociation
                     DataAssociation.Definitions
                     DataAssociation.Abstract
                     DataAssociation.APriori
                     DataAssociation.APriori.Debug
                     DataAssociation.SimpleRulesGenerator
                     DataAssociation.SimpleRulesGenerator.Debug
                     DataAssociation.Utils
                     DataAssociation.Itemset.SetImpl
                     DataAssociation.PostProcess
                     DataAssociation.PostProcess.Descriptor
--    other-modules:

executable mine-rules
    build-depends: base >= 4.6
                 , containers >= 0.5
                 , WekaData <= 0.1.2.5
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:    RunDataAssocWekaApriorySimple
    default-extensions: MultiParamTypeClasses
                        FlexibleInstances
                        UndecidableInstances



executable simple-rules-generator-test
    build-depends: DataAssociation
                 , base >= 4.6
                 , containers >= 0.5
                 , WekaData <= 0.1.2.5
    main-is: SimpleRulesGeneratorTest.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules: TestData
                   TestData.TiloBalkeExample



test-suite tests
    build-depends: DataAssociation
                 , hspec >= 2.2
                 , base >= 4.6
                 , containers >= 0.5
    type: exitcode-stdio-1.0
    main-is: tests.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules: AprioriSpec
                   TestData
                   TestData.TiloBalkeExample
                   SimpleRulesGeneratorSpec
