name:               DataAssociation-Explore
version:            0.0.0.1
cabal-version:      >=1.10
build-type:         Simple
license:            MIT
license-file:       ../LICENSE
homepage:           -
synopsis:           Exploration tool UI for data with Datta Association
category:           DataMining
author:             Dmitry K
--data-dir:       ""
extra-source-files: LICENCE

library
    build-depends:   base >=4.6
                   , DataAssociation -any
                   , WekaData >= 0.2.0.1
                   , containers >= 0.5
    hs-source-dirs:  src
    exposed-modules: DataAssociation.Explore.Program
                     DataAssociation.Explore.UI.Application
                     DataAssociation.Explore.UI.State
    exposed:    True
    buildable:  True
    default-language:   Haskell2010
    default-extensions: MultiParamTypeClasses
--    other-modules:


